--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
           href="index.htm"
           data-w-id="c082bc49-98eb-5ba3-0834-bf6896bfc7f9"
           class="brand w-nav-brand"
-          ><img
+          ><img style="position: relative; top: -15px;"
             src="img/gg.png"
             width="103"
             alt=""
