--- a/contact.html
+++ b/contact.html
@@ -258,8 +258,8 @@
             <div class="columns-left">
               <h6 class="small-block-title white">Phone Number</h6>
               <h2 class="section-title for-contacts">
-                <a href="tel:800-123-4567" class="section-title-link"
-                  >800-123-4567</a
+                <a href="tel:+254786197750" class="section-title-link"
+                  >+254786197750</a
                 >
               </h2>
             </div>
@@ -268,8 +268,8 @@
             <div class="columns-right">
               <h6 class="small-block-title white">Email</h6>
               <h2 class="section-title for-contacts">
-                <a href="mailto:info@yoursite.com" class="section-title-link"
-                  >info@yoursite.com</a
+                <a href="mailto:tenderheartsresidence@gmail.com" class="section-title-link"
+                  >tenderheartsresidence@gmail.com</a
                 >
               </h2>
             </div>
