--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Thu Feb 11 2021 10:32:52 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="virgo.webflow.io" data-wf-page="5d975dad89c88c305dcd7c5a" data-wf-site="5d7d3eeb17c02c092ad96d1f">
 
@@ -35,10 +35,10 @@
 
 <body>
     <div class="navbar-section">
-        <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
+        <div style="height: 150px;" data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
             role="banner" class="navbar w-nav"><a  style="position: relative; top: -15px;" href="index.htm" data-w-id="c082bc49-98eb-5ba3-0834-bf6896bfc7f9"
-                aria-current="page" class="brand w-nav-brand w--current"><img
-                    src="img/gg.png" width="103" alt=""
+                aria-current="page" class="brand w-nav-brand w--current"><img 
+                    src="img2/logobg3.png" width="103" alt=""
                     class="image-logo"></a>
             <nav role="navigation" data-w-id="c082bc49-98eb-5ba3-0834-bf6896bfc7fb" class="nav-menu w-nav-menu">
                 
